--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/.gitignore
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/.gitignore
@@ -1,4 +1,11 @@
 bin/
 obj/
-.vs/*
-Db.cs
+.vs/
+*.suo
+*.user
+*.sln.docstates
+_ReSharper*
+_UpgradeReport_Files/
+Backup*/
+UpgradeLog*.XML
+src/.vs/config/applicationhost.config
