--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ obj/
 Db.cs
 Interaktiv receptionist/Template Final/Hjemmesidetemplate/.vs/Hjemmesidetemplate/config/applicationhost.config
 Interaktiv receptionist/Template Final/Hjemmesidetemplate/.vs/Hjemmesidetemplate/v16/.suo
+Interaktiv receptionist/Template Final/Hjemmesidetemplate/.vs/Hjemmesidetemplate/v16/Server/sqlite3/storage.ide-wal
+Interaktiv receptionist/Template Final/Hjemmesidetemplate/.vs/Hjemmesidetemplate/v16/.suo
+Interaktiv receptionist/Template Final/Hjemmesidetemplate/.vs/Hjemmesidetemplate/config/applicationhost.config
+Interaktiv receptionist/Template Final/Hjemmesidetemplate/.vs/Hjemmesidetemplate/v16/.suo
+Interaktiv receptionist/Template Final/Hjemmesidetemplate/.vs/Hjemmesidetemplate/v16/Server/sqlite3/storage.ide-shm
+Interaktiv receptionist/Template Final/Hjemmesidetemplate/.vs/Hjemmesidetemplate/v16/Server/sqlite3/storage.ide-wal
