--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/appsettings.json
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/appsettings.json
@@ -10,3 +10,5 @@
   },
   "AllowedHosts": "*"
 }
+
+//Server=tcp:irnovi.database.windows.net,1433;Initial Catalog=IRNovi;Persist Security Info=False;User ID={Anders};Password={MAjjDA0218};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
