--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/appsettings.json
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LoginOgInfo-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "LoginOgInfoContext": "Server=(localdb)\\mssqllocaldb;Database=LoginOgInfoContext-5b34360b-0e41-40ee-87ee-d79f54bc34fa;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:irnovi.database.windows.net,1433;Initial Catalog=IRNovi;Persist Security Info=False;User ID=Anders;Password=MAjjDA0218;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "LoginOgInfoContext": "Server=tcp:irnovi.database.windows.net,1433;Initial Catalog=IRNovi;Persist Security Info=False;User ID=Anders;Password=MAjjDA0218;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,4 +11,6 @@
   "AllowedHosts": "*"
 }
 
+//Server=(localdb)\\mssqllocaldb;Database=aspnet-LoginOgInfo-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true
+  //Server=(localdb)\\mssqllocaldb;Database=LoginOgInfoContext-5b34360b-0e41-40ee-87ee-d79f54bc34fa;Trusted_Connection=True;MultipleActiveResultSets=true
 //Server=tcp:irnovi.database.windows.net,1433;Initial Catalog=IRNovi;Persist Security Info=False;User ID={Anders};Password={MAjjDA0218};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
